crates/review-buddy/tests/snapshots/drafts__edit_composer_100x30_dusk.snap
---
source: crates/review-buddy/tests/drafts.rs
expression: text(& render(& mut a))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                 Dusk
╭ files 3 ───────────────────────╮╭ src/ui/menus.rs ───────────────────────────────────────────────╮
│› · src/ui/menus.rs       +22 −1││              @@ -10,7 +10,9 @@ use crate::app::Action;         │
│  · src/ui/menubar.rs      +8 −0││›   10   10                                                     │
│  · src/ui/mod.rs          +2 −0││              ╭─ pending comment · line 10 ────────────────────╮│
│                                ││              │ This could return early. Worth a guard?        ││
│                                ││              ╰────────────────────────────────────────────────╯│
│                                ││    11   11   pub struct Menu {                                 │
│                                ││    12   12       items: Vec<MenuItem>,                         │
│                                ││         13 +     selected: usize,                              │
│                                ││         14 +     open: bool,                                   │
│                                ││    13   15   }                                                 │
│                                ││    14   16                                                     │
│                                ││    15   17   impl Menu {                                       │
│                                ││    16   18       pub fn new(items: Vec<MenuItem>) -> Self {    │
│                                ││              @@ -34,6 +36,24 @@ impl Menu {                    │
│                                ││    34   36       pub fn len(&self) -> usize {                  │
│                                ││    35   37           self.items.len()                          │
│                                ││    36   38       }                                             │
│                                ││         39 +                                                   │
│ Your review · pending ─────────││         40 +     pub fn select_next(&mut self) {               │
│1 suggestion · 1 comment        ││         41 +         if self.items.is_empty() {                │
│0 of 3 files viewed             ││         42 +             return;                               │
│Your review: not started        ││╭ Edit comment · menus.rs line 10 ─────────────────────────────╮│
│  menus.rs:51 Fewer branches th…│││ This could return early. Worth a guard? Edited.              ││
│  menus.rs:10 This could return…│││                                                              ││
│a approve · c comment           │││                                                              ││
│x request changes · R review    ││╰ ⏎ save · ⇧⏎ newline · esc cancel ────────────────────────────╯│
╰────────────────────────────────╯╰ hunk 1 of 3 · file 1 of 3 ─────────────────────────────────────╯
 ⏎ save  ⇧⏎ newline         · Added to your pending review. 2 comments waiting. Press a to approve.
